--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 glib = "0.14.8"
 gtk-source-sys = "0.10.0"
 sourceview = "0.9.0"
+clap = { version = "3.0.14", features = ["derive"] }
 
 [dependencies.gtk]
 version = "0.9.0"
