--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 glib = "0.14.8"
 gtk-source-sys = "0.10.0"
 sourceview = "0.9.0"
+clipboard = "0.5.0"
 
 [dependencies.gtk]
 version = "0.9.0"
